aggiunta possibilità di rimuovere task tramite span cliccabile in Tasks.vue creato api-remove-task.php che recupera l'index dell'elemento cliccato e lo rimuove dall'array di task

--- a/Backend/tasks.json
+++ b/Backend/tasks.json
@@ -1,18 +1,10 @@
 [
     {
-        "text": "aaaaav",
+        "text": "dsadsad",
         "completed": false
     },
     {
-        "text": "abb",
-        "completed": false
-    },
-    {
-        "text": "ddd",
-        "completed": false
-    },
-    {
-        "text": "ccc",
+        "text": "dassadsa",
         "completed": false
     }
 ]
